refactor: start command
removed the MoonCode.start command and moved the constants in the constants.ts file

--- a/apps/vscode-extension/package.json
+++ b/apps/vscode-extension/package.json
@@ -16,8 +16,9 @@
   "contributes": {
     "commands": [
       {
-        "command": "MoonCode.start",
-        "title": "MoonCode: Start"
+        "command": "MoonCode.showData",
+        "title": "MoonCode: Show Data",
+        "icon": "e"
       }
     ]
   },
