--- a/compose.yaml
+++ b/compose.yaml
@@ -1,11 +1,10 @@
-name: "mooncode-api"
 services:
-  postgres:
+  database:
     image: postgres:14-alpine
     ports:
-      - 5432:5432
+      - "5432:5432"
     volumes:
-      - ~/apps/postgres:/var/lib/postgresql/data
+      - ~/apps/mooncode/postgres:/var/lib/postgresql/data
     environment:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=postgres
