--- a/apps/vscode-extension/package.json
+++ b/apps/vscode-extension/package.json
@@ -19,6 +19,11 @@
         "command": "MoonCode.showData",
         "title": "MoonCode: Show Data",
         "icon": "e"
+      },
+      {
+        "command": "MoonCode.login",
+        "title": "MoonCode: Login",
+        "icon": "lol"
       }
     ]
   },
@@ -34,17 +39,20 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/vscode": "^1.95.0",
     "@types/mocha": "^10.0.9",
     "@types/node": "20.x",
+    "@types/vscode": "^1.95.0",
     "@typescript-eslint/eslint-plugin": "^8.10.0",
     "@typescript-eslint/parser": "^8.7.0",
-    "eslint": "^9.13.0",
-    "typescript": "^5.6.3",
-    "ts-loader": "^9.5.1",
-    "webpack": "^5.95.0",
-    "webpack-cli": "^5.1.4",
     "@vscode/test-cli": "^0.0.10",
-    "@vscode/test-electron": "^2.4.1"
+    "@vscode/test-electron": "^2.4.1",
+    "eslint": "^9.13.0",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.6.3",
+    "webpack": "^5.95.0",
+    "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "zod": "^3.24.1"
   }
 }
