--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "drizzle-orm": "^0.38.3",
+    "drizzle-orm": "^0.38.4",
     "passport-jwt": "^4.0.1",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "ulid": "^2.3.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
