--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@repo/utils": "*",
     "@fontsource-variable/inter": "^5.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
