--- a/apps/vscode-extension/package.json
+++ b/apps/vscode-extension/package.json
@@ -3,7 +3,6 @@
   "displayName": "MoonCode",
   "description": "",
   "version": "0.0.1",
-  "type": "module",
   "engines": {
     "vscode": "^1.95.0"
   },
@@ -13,7 +12,7 @@
   "activationEvents": [
     "onStartupFinished"
   ],
-  "main": "./dist/extension.cjs",
+  "main": "./dist/extension.js",
   "contributes": {
     "commands": [
       {
@@ -46,6 +45,7 @@
   "scripts": {
     "vscode:prepublish": "npm run package",
     "compile": "webpack",
+    "build": "tsc --build",
     "watch": "webpack --watch",
     "package": "webpack --mode production --devtool hidden-source-map",
     "compile-tests": "tsc -p . --outDir out",
