--- a/apps/vscode-extension/package.json
+++ b/apps/vscode-extension/package.json
@@ -10,7 +10,8 @@
     "Other"
   ],
   "activationEvents": [
-    "onStartupFinished"
+    "onStartupFinished",
+    "onCommand:Mooncode.activate"
   ],
   "main": "./dist/extension.js",
   "contributes": {
@@ -46,7 +47,8 @@
     "vscode:prepublish": "npm run package",
     "compile": "webpack",
     "build": "tsc --build",
-    "watch": "webpack --watch",
+    "watch": "webpack --watch --mode development",
+    "dev": "code --verbose --extensionDevelopmentPath=${PWD}",
     "package": "webpack --mode production --devtool hidden-source-map",
     "compile-tests": "tsc -p . --outDir out",
     "watch-tests": "tsc -p . -w --outDir out",
