--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -14,8 +14,12 @@
     "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
     "@repo/utils": "*",
-    "@tanstack/react-query": "^5.66.0",
-    "@tanstack/react-query-devtools": "^5.66.11",
+    "@tanstack/react-query": "^5.67.2",
+    "@tanstack/react-query-devtools": "^5.67.2",
+    "@trpc/client": "^11.0.0-rc.828",
+    "@trpc/react-query": "^11.0.0-rc.828",
+    "@trpc/server": "^11.0.0-rc.828",
+    "@trpc/tanstack-react-query": "^11.0.0-rc.828",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.474.0",
@@ -28,7 +32,6 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
-    "@tanstack/eslint-plugin-query": "^5.66.0",
     "@types/node": "^22.12.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
@@ -42,7 +45,7 @@
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^3.4.17",
-    "typescript": "~5.6.2",
+    "typescript": "^5.7.2",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5"
   }
