--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -29,13 +29,14 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@trpc/server": "^10.45.2",
     "@types/passport-jwt": "^4.0.1",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.38.4",
-    "nestjs-trpc": "^1.6.1",
+    "module": "^1.2.5",
     "passport-jwt": "^4.0.1",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.0",
