--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,9 +5,7 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
-  "exports": {
-    "./types": "./src/types"
-  },
+  "type": "module",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -23,6 +21,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@repo/trpc": "*",
+    "@repo/utils": "*",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
