--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -14,12 +14,12 @@
     "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
     "@repo/utils": "*",
-    "@tanstack/react-query": "^5.67.2",
+    "@repo/trpc": "*",
+    "@tanstack/react-query": "^4.18.0",
     "@tanstack/react-query-devtools": "^5.67.2",
-    "@trpc/client": "^11.0.0-rc.828",
-    "@trpc/react-query": "^11.0.0-rc.828",
-    "@trpc/server": "^11.0.0-rc.828",
-    "@trpc/tanstack-react-query": "^11.0.0-rc.828",
+    "@trpc/client": "^10.45.2",
+    "@trpc/react-query": "^10.45.2",
+    "@trpc/server": "^10.45.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.474.0",
