--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -13,10 +13,9 @@
     "@fontsource-variable/inter": "^5.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
-    "@repo/utils": "*",
     "@repo/trpc": "*",
+    "@repo/utils": "*",
     "@tanstack/react-query": "^4.18.0",
-    "@tanstack/react-query-devtools": "^5.67.2",
     "@trpc/client": "^10.45.2",
     "@trpc/react-query": "^10.45.2",
     "@trpc/server": "^10.45.2",
@@ -47,6 +46,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.18.2",
+    "vite-plugin-commonjs": "^0.10.4",
     "vite": "^6.0.5"
   }
 }
