--- a/packages/trpc/package.json
+++ b/packages/trpc/package.json
@@ -6,7 +6,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "dev": "tsc"
+    "dev": "tsc --watch"
   },
   "files": [
     "./dist/**"
