--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -22,8 +22,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.474.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "recharts": "^2.15.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
@@ -32,11 +32,12 @@
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/node": "^22.12.0",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.1",
+    "@types/recharts": "^1.8.29",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.17.0",
+    "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
@@ -46,7 +47,10 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.18.2",
-    "vite-plugin-commonjs": "^0.10.4",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "vite-plugin-commonjs": "^0.10.4"
+  },
+  "overrides": {
+    "@types/react": "^18.0.0"
   }
 }
