--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "check-types": "turbo run check-types"
   },
   "devDependencies": {
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.1",
     "prettier": "^3.5.0",
     "turbo": "^2.4.4",
     "typescript": "5.7.3"
