--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -15,13 +15,13 @@
     "@repo/typescript-config": "*",
     "@turbo/gen": "^2.4.0",
     "@types/node": "^22.13.0",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.1",
     "eslint": "^9.21.0",
     "typescript": "5.7.3"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   }
 }
