--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -16,6 +16,7 @@
     "@repo/trpc": "*",
     "@repo/utils": "*",
     "@tanstack/react-query": "^4.18.0",
+    "@tanstack/react-query-devtools": "^4.36.1",
     "@trpc/client": "^10.45.2",
     "@trpc/react-query": "^10.45.2",
     "@trpc/server": "^10.45.2",
