--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -27,6 +27,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@repo/trpc": "*",
+    "@repo/utils": "*",
     "@trpc/server": "^10.45.2",
     "@types/passport-jwt": "^4.0.1",
     "bcrypt": "^5.1.1",
