--- a/compose.yaml
+++ b/compose.yaml
@@ -1,10 +1,11 @@
 services:
   database:
-    image: postgres:14-alpine
+    image: postgres:17-alpine
+    container_name: mooncode_postgres_db_container
     ports:
       - "5432:5432"
     volumes:
-      - mooncode_postgres:/var/lib/postgresql/data
+      - ~/apps/mooncode/postgres:/var/lib/postgresql/data
     environment:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=postgres
