--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@fontsource-variable/inter": "^5.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.2",
     "@repo/trpc": "*",
     "@repo/utils": "*",
     "@tanstack/react-query": "^4.18.0",
@@ -22,8 +22,10 @@
     "@trpc/server": "^10.45.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.474.0",
     "react": "18.3.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "18.3.1",
     "recharts": "^2.15.1",
     "tailwind-merge": "^2.6.0",
