--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fontsource-variable/inter": "^5.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@repo/trpc": "*",
     "@repo/utils": "*",
