--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -34,5 +34,8 @@
   "devDependencies": {
     "@repo/typescript-config": "*",
     "typescript": "5.7.3"
+  },
+  "dependencies": {
+    "zod": "^3.24.2"
   }
 }
