build: trpc and react query - bumped @trpc/client, @trpc/server and @trpc/tanstack-react-query to v11.1.0, @tanstack/react-query and @tanstack/react-query-devtools to v5.74.3 for the dashboard -  updated all the calls to trpc in the dashboard to use the new way of fetching data - replaced  some instances of useQuery by useSuspenseQuery - removed @tanstack/react-query from the resolved deps, and also from optimizeDeps in the vite.config.ts -bumped @trpc/client, @trpc/server and to v11.1.0 in the vscode extension and updated trpc instantiation in the client.ts file

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "compilerOptions": {
+    "composite": true,
     "module": "commonjs",
     "declaration": true,
+    "declarationMap": true,
     "removeComments": true,
     "moduleResolution": "node10",
     "emitDecoratorMetadata": true,
