--- a/apps/vscode-extension/tsconfig.json
+++ b/apps/vscode-extension/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "references": [{ "path": "../../packages/trpc/tsconfig.json" }],
   "compilerOptions": {
     "module": "ES2022",
     "target": "ES2022",
