--- a/apps/dashboard/tsconfig.app.json
+++ b/apps/dashboard/tsconfig.app.json
@@ -1,5 +1,7 @@
 {
   "extends": "../../tsconfig.json",
+  "references": [{ "path": "../../packages/trpc/tsconfig.json" }],
+
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "ES2020",
