--- a/packages/trpc/tsconfig.json
+++ b/packages/trpc/tsconfig.json
@@ -1,8 +1,12 @@
 {
   "extends": "@repo/typescript-config/base.json",
+  "references": [{ "path": "../../apps/api/tsconfig.json" }],
+
   "compilerOptions": {
     "outDir": "dist",
-    "rootDir": "src"
+    "rootDir": "src",
+    "composite": true,
+    "incremental": true
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
