--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@fontsource-variable/inter": "^5.1.1",
+    "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
+    "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-popover": "^1.1.6",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-slot": "^1.2.0",
     "@repo/trpc": "*",
     "@repo/utils": "*",
     "@tanstack/react-query": "^5.74.3",
@@ -29,11 +31,12 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "18.3.1",
     "react-error-boundary": "^5.0.0",
+    "react-hook-form": "^7.56.1",
     "react-router": "^7.5.1",
     "recharts": "^2.15.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.1",
+    "zod": "^3.24.3",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
