--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -33,6 +33,7 @@
     "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.56.1",
     "react-router": "^7.5.1",
+    "react-spinners": "^0.17.0",
     "recharts": "^2.15.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
