refactor: extension -  separated the showData debug command in two commands: showCurrentData and showInitialData - added both of those commands in the package.json to configure them properly - extracted the updateLanguageData function from the getTime file and moved it in the updateCurrentLanguage file, and both functions there have been combined in one single function

--- a/apps/vscode-extension/package.json
+++ b/apps/vscode-extension/package.json
@@ -17,8 +17,13 @@
   "contributes": {
     "commands": [
       {
-        "command": "MoonCode.showData",
-        "title": "MoonCode: Show Data",
+        "command": "MoonCode.showCurrentData",
+        "title": "MoonCode: Show Current Data",
+        "icon": "e"
+      },
+      {
+        "command": "MoonCode.showInitialData",
+        "title": "MoonCode: Show Initial Data",
         "icon": "e"
       },
       {
