feat: files - added  a global object similar to languagesData to track the files data, called filesData - replaced teh LanguagesData type by LanguageMap, to reduce confusion, the same type for files: FileMap - reused the same logic as languages to track the time for files in the calculateTime function - in this same function, all the activityListeners have been updated to include the update of the current file - the getTime function now also update all the time for files and return an object containing both languagesData and filesData - added two new functions getCurrentFileProperties and updateCurrentFileObj - added the command  showCurrentFilesData and renamed the commands showInitialData => showInitialLanguagesData, showCurrentData => showCurrentLanguagesData - updated the calls of getTime in the periodicSyncData function

--- a/apps/vscode-extension/package.json
+++ b/apps/vscode-extension/package.json
@@ -17,13 +17,18 @@
   "contributes": {
     "commands": [
       {
-        "command": "MoonCode.showCurrentData",
-        "title": "MoonCode: Show Current Data",
+        "command": "MoonCode.showCurrentLanguagesData",
+        "title": "MoonCode: Show Current Languages Data",
         "icon": "e"
       },
       {
-        "command": "MoonCode.showInitialData",
-        "title": "MoonCode: Show Initial Data",
+        "command": "MoonCode.showInitialLanguagesData",
+        "title": "MoonCode: Show Initial Languages Data",
+        "icon": "e"
+      },
+      {
+        "command": "MoonCode.showCurrentFilesData",
+        "title": "MoonCode: Show Current Files Data",
         "icon": "e"
       },
       {
