feat: get and upsert data from the extension - added  a findAllFiles method in the files.service -  added a dto to get the files from the extension in the files-stats.dto - added a getDailyFilesStatsForExtension procedure - added the corresponding implementation of the getDailyFilesStatsForExtension method in the files-stats.service - added the showInitialFilesData command in the package.json - the extension initializes the files tracking with the data got from the server - replaced the relativePath  by the absolutePath in the getCurrentFileProperties function and updated the refs in the updateCurrentFileObj and calculateTime functions

--- a/apps/vscode-extension/package.json
+++ b/apps/vscode-extension/package.json
@@ -17,13 +17,18 @@
   "contributes": {
     "commands": [
       {
+        "command": "MoonCode.showInitialLanguagesData",
+        "title": "MoonCode: Show Initial Languages Data",
+        "icon": "e"
+      },
+      {
         "command": "MoonCode.showCurrentLanguagesData",
         "title": "MoonCode: Show Current Languages Data",
         "icon": "e"
       },
       {
-        "command": "MoonCode.showInitialLanguagesData",
-        "title": "MoonCode: Show Initial Languages Data",
+        "command": "MoonCode.showInitialFilesData",
+        "title": "MoonCode: Show Initial Files Data",
         "icon": "e"
       },
       {
