feat: extension -  update the time spent per language in the upsert method of the days-stats.service only when the new time spent is greater than the older one -  added GetProjectLanguagesTimeOnPeriodDto in the files-stats.dto and the corresponding type - added the getProjectLanguagesTimeOnPeriod procedure in the files-stats.router - added the getLanguagesTimeOnPeriod method in the projects.service -  added the implementation of the getProjectLanguagesTimeOnPeriod in the files-stats.service - in the data returned by the getProjectPerDayOfPeriod, removed timeSpentLine and timeSpentBar and replaced them by a singular timeSpent - added an area chart alternative in the ProjectTimeOnPeriodChart - added a correction in the groupBy returned by the getPeriodStoreValuesFromURL before instantiating the zustand store -  added a command in the vscode extension to view when the data in the globalState - in the calculateTime function, replaced the setInterval  function by a setTimeOut which will launch a new instance of the tracking time function only when it is over - in the isNewDayHandler and calculateTime functions when it is time to empty the languagesData and filesData, replaced the map by a forEach for easier readability

--- a/apps/vscode-extension/package.json
+++ b/apps/vscode-extension/package.json
@@ -37,6 +37,11 @@
         "icon": "e"
       },
       {
+        "command": "MoonCode.showGlobalStateData",
+        "title": "MoonCode: Show Global State data",
+        "icon": "e"
+      },
+      {
         "command": "MoonCode.login",
         "title": "MoonCode: Login",
         "icon": "lol"
