--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -25,6 +25,7 @@
     "@trpc/tanstack-react-query": "^11.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "js-md5": "^0.8.3",
     "lucide-react": "^0.474.0",
@@ -43,6 +44,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/d3": "^7.4.3",
     "@types/node": "^22.12.0",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.1",
