--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -26,7 +26,7 @@
     "@trpc/tanstack-react-query": "^11.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "d3": "^7.9.0",
+    "d3-hierarchy": "^3.1.2",
     "date-fns": "^4.1.0",
     "js-md5": "^0.8.3",
     "lucide-react": "^0.474.0",
