--- a/apps/vscode-extension/package.json
+++ b/apps/vscode-extension/package.json
@@ -3,6 +3,9 @@
   "displayName": "MoonCode",
   "description": "",
   "version": "0.0.1",
+  "author": {
+    "name": "Friedrich482"
+  },
   "engines": {
     "vscode": "^1.95.0"
   },
@@ -94,6 +97,7 @@
     "@repo/utils": "*",
     "@trpc/client": "^11.1.0",
     "@trpc/server": "^11.1.0",
+    "express": "^4.21.2",
     "zod": "^3.24.2"
   }
 }
