--- a/apps/vscode-extension/package.json
+++ b/apps/vscode-extension/package.json
@@ -98,6 +98,7 @@
     "@trpc/client": "^11.1.0",
     "@trpc/server": "^11.1.0",
     "express": "^4.21.2",
+    "get-port": "^7.1.0",
     "zod": "^3.24.2"
   }
 }
