--- a/apps/vscode-extension/package.json
+++ b/apps/vscode-extension/package.json
@@ -68,15 +68,15 @@
   },
   "scripts": {
     "vscode:prepublish": "npm run package",
-    "compile": "webpack",
+    "compile": "node build.js",
     "build": "tsc --build",
-    "watch": "webpack --watch --mode development",
-    "package": "webpack --mode production --devtool hidden-source-map",
+    "watch": "node build.js --watch",
+    "package": "node build.js --production",
     "compile-tests": "tsc -p . --outDir out",
     "watch-tests": "tsc -p . -w --outDir out",
     "pretest": "npm run compile-tests && npm run compile && npm run lint",
-    "lint": "eslint src",
-    "test": "vscode-test"
+    "lint": "eslint src --ext ts",
+    "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.9",
@@ -86,11 +86,9 @@
     "@typescript-eslint/parser": "^8.23.0",
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.4.1",
+    "esbuild": "^0.18.20",
     "eslint": "^9.13.0",
-    "ts-loader": "^9.5.1",
-    "typescript": "^5.7.3",
-    "webpack": "^5.95.0",
-    "webpack-cli": "^5.1.4"
+    "typescript": "^5.7.3"
   },
   "dependencies": {
     "@repo/trpc": "*",
