feat: callback auth flow -  revamped the auth flow in the extension: now when the login function is called, it opens the dashboard and uses the dashboard auth routes to login/register then the api sends a cookie to the dashboard and the jwt to the extension - added the registerAuthUriHandler used to listen to the callback received by the dashboard when the login is complete - added the getDashboardPort function to make the access to the dashboard port global in the extension - removed the register command. The auth flow is now entirely handled by the dashboard -  the logout command in the extension will only show if the user is logged in and the same thing for the login command that will only show if the user is logged out - the signIn method of the auth.service returns the access_token if the request has been sent by the extension, same thing for the register method - all the methods of the users.service now use dtos - the onSubmit function in the LoginForm now gets the jwt from the response from the api and redirects the user to open his vscode app then the login is successful - in the RegisterForm, added the same as the LoginForm and the query invalidation because the user is logged in as soon as he registers - added a function called getCallbackUrl in the dashboard to reuse that logic in the login and register forms

--- a/apps/vscode-extension/package.json
+++ b/apps/vscode-extension/package.json
@@ -3,6 +3,7 @@
   "displayName": "MoonCode",
   "description": "",
   "version": "0.0.1",
+  "publisher": "Friedrich482",
   "author": {
     "name": "Friedrich482"
   },
@@ -50,11 +51,6 @@
         "icon": "lol"
       },
       {
-        "command": "MoonCode.register",
-        "title": "MoonCode: Register",
-        "icon": "lol"
-      },
-      {
         "command": "MoonCode.logout",
         "title": "MoonCode: Logout",
         "icon": "lol"
@@ -64,7 +60,19 @@
         "title": "MoonCode: Open Dashboard",
         "icon": "lol"
       }
-    ]
+    ],
+    "menus": {
+      "commandPalette": [
+        {
+          "command": "MoonCode.login",
+          "when": "!MoonCode.isLoggedIn"
+        },
+        {
+          "command": "MoonCode.logout",
+          "when": "MoonCode.isLoggedIn"
+        }
+      ]
+    }
   },
   "scripts": {
     "vscode:prepublish": "npm run package",
