build: api - made some environment variables available in all the monorepo for turbo tasks - improved tsconfig.build.json for the api - added NODE_ENV=production to the start:prod script of the api

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -11,7 +11,7 @@
     "start": "nest start",
     "dev": "NEST_DEBUG=true nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "NODE_ENV=production node dist/main.js",
     "studio": "drizzle-kit studio",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
