--- a/apps/vscode-extension/package.json
+++ b/apps/vscode-extension/package.json
@@ -11,6 +11,12 @@
   "engines": {
     "vscode": "^1.95.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Friedrich482/mooncode.git"
+  },
+  "license": "MIT",
+  "homepage": "https://github.com/Friedrich482/mooncode",
   "categories": [
     "Programming Languages",
     "Language Packs",
