--- a/apps/vscode-extension/package.json
+++ b/apps/vscode-extension/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mooncode",
   "displayName": "MoonCode",
-  "description": "MoonCode is an application that tracks your coding time (like Wakatime) and gives you a detailled summary about all your coding statistics. With MoonCode, developers get the full history of their coding activity.",
+  "description": "MoonCode is an extension that tracks your coding time (like Wakatime) and gives you a detailled summary about all your coding statistics. With MoonCode, developers get the full history of their coding activity.",
   "version": "0.0.1",
   "icon": "./public/moon.png",
   "publisher": "Friedrich482",
@@ -20,7 +20,8 @@
   "categories": [
     "Programming Languages",
     "Language Packs",
-    "Visualization"
+    "Visualization",
+    "Other"
   ],
   "activationEvents": [
     "onStartupFinished",
