feat: @repo/ui - populated the package @repo/ui to be the source of truth of common ui components to share between the dashboard and the web app - it integrates properly with the web app, dashboard

--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@repo/trpc": "*",
     "@repo/common": "*",
+    "@repo/ui": "*",
     "@tanstack/react-query": "^5.74.3",
     "@tanstack/react-query-devtools": "^5.74.3",
     "@trpc/client": "^11.1.0",
