--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,13 +12,15 @@
     "next": "15.4.1",
     "next-themes": "^0.4.6",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "@repo/common": "*",
+    "@repo/trpc": "*",
+    "@repo/ui": "*"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "4.0.0-alpha.13",
     "@types/node": "^20",
-    "@types/react": "^18.0.0",
+    "@types/react": "^18.3.1",
     "@types/react-dom": "18.3.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.21.0",
