↩ revert: login/logout -  properly formatted the compose.yaml file in the environment section - reverted to the returning data from the upsertion of languages and files - reverted back the commands login and logout, the logout function and updated the package.json - augmented the MAX_IDLE_TIME to 5 mins - made the dateStringDto less strict

--- a/apps/vscode-extension/package.json
+++ b/apps/vscode-extension/package.json
@@ -60,6 +60,10 @@
         "title": "MoonCode: Login"
       },
       {
+        "command": "MoonCode.logout",
+        "title": "MoonCode: Logout"
+      },
+      {
         "command": "MoonCode.openDashboard",
         "title": "MoonCode: Open Dashboard"
       }
@@ -69,6 +73,10 @@
         {
           "command": "MoonCode.login",
           "when": "!MoonCode.isLoggedIn"
+        },
+        {
+          "command": "MoonCode.logout",
+          "when": "MoonCode.isLoggedIn"
         }
       ]
     }
