--- a/apps/api/compose.yaml
+++ b/apps/api/compose.yaml
@@ -7,9 +7,9 @@ services:
     volumes:
       - mooncode_postgres:/var/lib/postgresql/data
     environment:
-      - POSTGRES_PASSWORD: postgres
-      - POSTGRES_USER: postgres
-      - POSTGRES_DB: mooncode
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_DB=mooncode
 volumes:
   mooncode_postgres:
     name: mooncode_postgres_db
