--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -41,5 +41,8 @@
     "react-dom": "18.3.1",
     "tailwind-merge": "^2.6.0",
     "tw-animate-css": "^1.3.5"
+  },
+  "imports": {
+    "#*": "./src/*"
   }
 }
