build: common deps - installed zod globally - removed env variables from turbo.json - removed useless deps from api

--- a/apps/vscode-extension/package.json
+++ b/apps/vscode-extension/package.json
@@ -133,7 +133,6 @@
     "@trpc/server": "^11.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.21.2",
-    "get-port": "^7.1.0",
-    "zod": "^3.24.2"
+    "get-port": "^7.1.0"
   }
 }
