--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   ],
   "dependencies": {
     "date-fns": "^4.1.0",
-    "superjson": "^2.2.2"
+    "superjson": "^2.2.2",
+    "zod": "^3.24.3"
   }
 }
