--- a/apps/vscode-extension/package.json
+++ b/apps/vscode-extension/package.json
@@ -131,8 +131,10 @@
     "@repo/trpc": "*",
     "@trpc/client": "^11.1.0",
     "@trpc/server": "^11.1.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.21.2",
-    "get-port": "^7.1.0"
+    "get-port": "^7.1.0",
+    "zod": "^3.24.3"
   }
 }
