--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "@fontsource-variable/inter": "^5.1.1",
     "@hookform/resolvers": "^5.0.1",
-    "@repo/trpc": "*",
     "@repo/common": "*",
+    "@repo/trpc": "*",
     "@repo/ui": "*",
     "@tanstack/react-query": "^5.74.3",
     "@tanstack/react-query-devtools": "^5.74.3",
@@ -21,6 +21,7 @@
     "@trpc/server": "^11.1.0",
     "@trpc/tanstack-react-query": "^11.1.0",
     "d3-hierarchy": "^3.1.2",
+    "date-fns": "^4.1.0",
     "js-md5": "^0.8.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -29,6 +30,7 @@
     "react-router": "^7.5.1",
     "react-spinners": "^0.17.0",
     "recharts": "^2.15.1",
+    "zod": "^3.24.3",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
