--- a/package.json
+++ b/package.json
@@ -11,12 +11,9 @@
     "lint-staged": "lint-staged"
   },
   "devDependencies": {
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.1",
     "lint-staged": "^15.5.1",
     "prettier": "^3.5.0",
-    "turbo": "^2.5.4",
-    "typescript": "5.7.3"
+    "turbo": "^2.5.4"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -35,8 +32,6 @@
     "packages/*"
   ],
   "dependencies": {
-    "date-fns": "^4.1.0",
-    "superjson": "^2.2.2",
-    "zod": "^3.24.3"
+    "superjson": "^2.2.2"
   }
 }
