--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -36,6 +36,7 @@
     "typescript": "5.7.3"
   },
   "dependencies": {
-    "date-fns": "^4.1.0"
+    "date-fns": "^4.1.0",
+    "zod": "^3.24.3"
   }
 }
