--- a/apps/vscode-extension/package.json
+++ b/apps/vscode-extension/package.json
@@ -1,8 +1,8 @@
 {
   "name": "mooncode",
   "displayName": "MoonCode",
-  "description": "MoonCode is an extension that tracks your coding time (like Wakatime) and gives you a detailled summary about all your coding statistics. With MoonCode, developers get the full history of their coding activity.",
-  "version": "0.0.17",
+  "description": "MoonCode is an extension that tracks your coding time (like WakaTime) and gives you a detailed summary about all your coding statistics. With MoonCode, developers get the full history of their coding activity.",
+  "version": "0.0.18",
   "icon": "./public/moon.png",
   "publisher": "Friedrich482",
   "author": {
